90% of backend code implemented and now works successfully by the grace of God

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,16 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # ==========================
-# JWT
+# JWT Configuration
 # ==========================
 jwt.secret=${JWT_SECRET}
-jwt.access-expiration-ms=${JWT_ACCESS_EXPIRATION_MS}
-jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS}
+jwt.access-expiration-ms=${JWT_ACCESS_EXPIRATION_MS:900000}
+jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
+
+# ? NEW: Token Encryption Key (AES-256)
+# Generate using: TokenEncryptionService.main()
+# CRITICAL: Keep this secret and different from JWT_SECRET
+security.token.encryption-key=${TOKEN_ENCRYPTION_KEY}
 
 # ==========================
 # Base URL for OAuth2
@@ -84,7 +89,7 @@ rapidapi.spotify.url=${RAPIDAPI_SPOTIFY_URL}
 rapidapi.workout.host=${RAPIDAPI_WORKOUT_HOST}
 rapidapi.workout.base-url=${RAPIDAPI_WORKOUT_BASE_URL}
 
-# Shazam (ADDED URL)
+# Shazam
 rapidapi.shazam.host=${RAPIDAPI_SHAZAM_HOST}
 rapidapi.shazam.url=${RAPIDAPI_SHAZAM_URL}
 
@@ -165,7 +170,6 @@ logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.postgresql=DEBUG
 
-
 # ==========================
 # GetStream Configuration
 # ==========================
@@ -191,3 +195,19 @@ file.upload-dir=./uploads
 file.max-size=50MB
 
 spring.mvc.favicon.enabled=false
+
+# ==========================
+# Rate Limiting Configuration
+# ==========================
+rate.limit.enabled=true
+rate.limit.capacity=100
+rate.limit.refill-seconds=1
+rate.limit.track-by-ip=true
+rate.limit.max-cache-size=100000
+rate.limit.excluded-paths=/actuator/**,/error,/favicon.ico,/.well-known/**
+
+# ==========================
+# ? NEW: Cache Configuration
+# ==========================
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=10000,expireAfterWrite=30m
