--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,34 +1,38 @@
-name: Docker Build and Push
+name: Build and Push Docker Image
 
+# Trigger on push to master branch
 on:
   push:
-    branches: [ "master" ]  # adjust if your main branch is 'main'
+    branches: ["master"]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout code
+      # 1️⃣ Checkout repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Log in to Docker Hub
+      # 2️⃣ Set up Java 17 (for Maven builds)
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # 3️⃣ Log in to Docker Hub using personal access token
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3️⃣ Build and push Docker image
+      # 4️⃣ Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: yourdockerhubusername/nova-backend:latest
-
-          # Cache last image to speed up builds (especially Maven dependencies)
-          cache-from: type=registry,ref=yourdockerhubusername/nova-backend:latest
-          cache-to: type=registry,ref=yourdockerhubusername/nova-backend:latest,mode=max
+          tags: cyrilvibes/nova-backend:latest
