--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -32,6 +32,11 @@ security.token.encryption-key=${TOKEN_ENCRYPTION_KEY}
 # Base URL for OAuth2
 # ==========================
 app.base-url=${APP_BASE_URL}
+
+# ==========================
+# Frontend URL
+# ==========================
+app.frontend-url=${APP_FRONTEND_URL}
 
 # ==========================
 # Google OAuth2
@@ -131,6 +136,7 @@ logging.level.org.springframework.security.web.access=DEBUG
 logging.level.com.novaTech.Nova.Security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.flywaydb=DEBUG
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
@@ -167,11 +173,6 @@ getstream.project.id=${GETSTREAM_PROJECT_ID}
 getstream.api.secret=${GETSTREAM_API_SECRET}
 
 # ==========================
-# Frontend URL Configuration
-# ==========================
-app.frontend.url=${APP_FRONTEND_URL}
-
-# ==========================
 # WebSocket Configuration
 # ==========================
 websocket.allowed-origins=${WEBSOCKET_ALLOWED_ORIGINS}
@@ -198,3 +199,9 @@ rate.limit.excluded-paths=/actuator/**,/error,/favicon.ico,/.well-known/**
 # ==========================
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=10000,expireAfterWrite=30m
+
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.out-of-order=false
