--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -200,8 +200,7 @@ rate.limit.excluded-paths=/actuator/**,/error,/favicon.ico,/.well-known/**
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=10000,expireAfterWrite=30m
 
-
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=false
