--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -205,24 +205,7 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=false
 
-# ==========================
-# Daily.co Video Conferencing
-# ==========================
-# API key ? loaded from the DAILY_API_KEY environment variable.
-# NEVER hard-code this value here; set it in your deployment environment
-# (Render dashboard ? Environment ? DAILY_API_KEY).
-daily.api.key=${DAILY_API_KEY}
 
-# Your Daily.co subdomain (the part before .daily.co in your room URLs).
-# e.g. if your rooms are at https://noav.daily.co/room-name, set: noav.daily.co
-daily.domain=${DAILY_DOMAIN:noav.daily.co}
-
-# Daily REST API base URL ? no trailing slash. Default is fine; only override
-# if Daily ever changes their API URL or you're using a proxy.
-daily.api.url=${DAILY_API_URL:https://api.daily.co/v1}
-
-# How many hours until a Daily room auto-expires after creation.
-# Rooms are also explicitly deleted when endMeeting() is called, so this
-# is just a safety net for rooms that were never formally ended.
-# Default: 24 hours. Increase for long-running or recurring meetings.
-daily.room.expiry-hours=${DAILY_ROOM_EXPIRY_HOURS:24}
+jitsi.domain=${JITSI_DOMAIN}
+jitsi.jwt.enabled=${JITSI_JWT}
+jitsi.room.expiry-hours=${JITSI_ROOM}
