--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -205,7 +205,12 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.out-of-order=false
 
-
-jitsi.domain=${JITSI_DOMAIN}
-jitsi.jwt.enabled=${JITSI_JWT}
-jitsi.room.expiry-hours=${JITSI_ROOM}
+# ==========================
+# JaaS (8x8.vc) ? Jitsi as a Service
+# ==========================
+jitsi.domain=${JITSI_DOMAIN:8x8.vc}
+jitsi.app.id=${JITSI_APP_ID}
+jitsi.api.key.id=${JITSI_API_KEY_ID}
+jitsi.private.key=${JITSI_PRIVATE_KEY}
+jitsi.jwt.enabled=true
+jitsi.room.expiry-hours=${JITSI_ROOM_EXPIRY_HOURS:2}
