--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -208,7 +208,7 @@ spring.flyway.out-of-order=false
 # ==========================
 # JaaS (8x8.vc) ? Jitsi as a Service
 # ==========================
-jitsi.domain=${JITSI_DOMAIN:8x8.vc}
+jitsi.domain=${JITSI_DOMAIN_2:8x8.vc}
 jitsi.app.id=${JITSI_APP_ID}
 jitsi.api.key.id=${JITSI_API_KEY_ID}
 jitsi.private.key=${JITSI_PRIVATE_KEY}
